--- a/caferio/input.css
+++ b/caferio/input.css
@@ -252,3 +252,12 @@
 .footer-socials {
   @apply mt-3 flex space-x-4 flex-wrap;
 }
+.footer-menu-col {
+  @apply w-6/12 sm:w-3/12 md:w-4/12 lg:w-2/12 p-4;
+}
+.footer-heading {
+  @apply text-lg font-semibold capitalize;
+}
+.footer-ul-li {
+  @apply block text-base text-gray-500 capitalize mt-3;
+}
