--- a/RealEstate/input.css
+++ b/RealEstate/input.css
@@ -1,3 +1,8 @@
 @tailwind base;
 @tailwind components;
 @tailwind utilities;
+
+.ficon:hover {
+  filter: invert(53%) sepia(68%) saturate(434%) hue-rotate(120deg)
+    brightness(101%) contrast(94%);
+}
